--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <HTML lang="pt">
 
 <head>
-    <title>Batalha Naval - Francico Esteves</title>
+    <title>Batalha Naval - António Campaniço</title>
     <meta charset="utf-8">
 </head>
 
 <body>
-    <h1>O jogo da batalha Naval, por Francisco Esteves</h1>
+    <h1>O jogo da batalha Naval, por António Campaniço</h1>
     <script src="batalhanaval.js">
     </script>
 </body>
